app.css
body{
	margin: 0;
	font-family: BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	font-size: 13px;
	-webkit-font-smoothing: antialiased;
	min-width: 1100px;
	color: rgba(0,0,0,0.8);
	letter-spacing: .1px;
}

#modal-background{
	background-color: rgba(0,0,0,0.5);
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 999;
	opacity: 0;
	transition: 0.2s opacity;
	display: none;
}

.modal-outer{
	display: none;
	position: fixed;
	text-align: center;
	z-index: 1000;
	opacity: 0;
	transform: translate3d(0, 300px, 0);
	transition: 0.3s transform, 0.3s opacity;
}

.modal-inner{
	width: 100%;
	background-color: #fff;
	border-radius: 5px;
	margin: 0 auto;
	overflow: hidden;
	text-align: left;
	width: 800px;
}

.modal-inner input{
	font-size: 1.5em;
	border: 0;
	outline: 0;
	margin: 1em 0;
	padding: 0;
	width: 100%;
}

.modal-inner textarea{
	border: 0;
	outline: 0;
	height: 300px;
	width: 100%;
	padding: 0;
	font-size: 1em;
	resize: none;
}

.modal-header{
	background-color: #efefef;
	color: rgba(0,0,0,0.6);
	font-weight: bold;
}

.modal-footer{
	border-top: 1px solid rgba(0,0,0,0.1);
	height: 27px;
}

.modal-footer .submit-new-issue{
	float: right;
}

.modal-footer .submit-new-issue button{
	background-color: #f3f7fd;
	border: 1px solid rgba(0,0,0,0.1);
	border-radius: 3px;
	color: #729fcc;
	font-weight: 500;
	outline: 0;
	font-size: 12px;
	padding: 5px 10px;
	transition: 0.3s color;
}

.modal-footer .submit-new-issue button.disabled{
	color: rgba(0,0,0,0.3);
}

.modal-body, .modal-header, .modal-footer{
	padding: 1em 1.5em;
}

#sidebar{
	width: 225px;
	position: fixed;
	left: 0;
	top: 0;
	bottom: 0;
	background-color: #f9f9f9;
	border-right: 1px solid rgba(0,0,0,0.05);
	box-sizing: border-box;
}

#sidebar .top-actions{
	text-align: right;
	padding: 1em;
}

#sidebar .top-actions .global-settings, #sidebar .top-actions .new-issue{
	display: inline-block;
	margin-left: 10px;
}

#sidebar .top-actions img{
	width: 15px;
	height: 15px;
}

#sidebar ul{
	padding: 0;
	margin: 0;
}

#sidebar ul li{
	list-style: none;
	padding: .5em 20px;
	margin: .5em 0;
	cursor: pointer;
}

#sidebar ul li img{
	width: 20px;
	border-radius: 50%;
	vertical-align: middle;
	margin-right: 10px;
	position: relative;
	top: -1px;
}

#sidebar ul li label{
	float: right;
	color: rgba(0,0,0,0.5);
}

#sidebar #repo-sidebar li.template{
	display: none;
}

#sidebar ul li:hover:not(.title){
	color: #0077f5;
}

#sidebar ul li.active{
	font-weight: bold;
	color: #0077f5;
}

#sidebar ul li.title{
	text-transform: uppercase;
	color: rgba(0,0,0,0.4);
	font-size: .8em;
}


#issue-list{
	left: 225px;
	position: fixed;
	top: 0;
	bottom: 0;
	width: 340px;
	border-right: 1px solid rgba(0,0,0,0.1);
	box-sizing:border-box;
}

#issue-list .placeholder, #issue-contents .placeholder{
	position: absolute;
	width: 100%;
	height: 100%;
	background-color:#fafafa;
	z-index: 2;
	box-sizing: border-box;
	padding-top: 300px;
	line-height: 0;
	text-align: center;
	color: rgba(0,0,0,0.5);
}

#issue-list .placeholder.hide, #issue-contents .placeholder.hide{
	display: none;
}

#issue-list #search-box{
	position: fixed;
	top: 0;
	left: 225px;
	width: 339px;
	z-index: 1;
}
#issue-list #search-box input{
	border: 0;
	width: 100%;
	font-family:'Roboto', sans-serif;
	border-bottom: 1px solid rgba(0,0,0,0.1);
	padding: 1em 1.5em;
	font-size: 13px;
	-webkit-font-smoothing: antialiased;
}

#issue-list ul{
	padding: 0;
	margin: 0;
	margin-top: 41px;
	height: calc(100% - 41px);
	overflow-y: auto;
}

#issue-list ul li.issue-box .issue-details{
	font-size: 12px;
	font-weight: 500;
}

#issue-list ul li.issue-box.template{
	display: none;
}

#issue-list ul li.issue-box{
	list-style: none;
	border-bottom: 1px solid rgba(0,0,0,0.05);
	padding: 15px 15px 15px 25px;
}

#issue-list ul li.issue-box .issue-status{
	display: inline-block;
	vertical-align: middle;
}

/*#issue-list ul li.issue-box .issue-status{
	display: inline-block;
	vertical-align: middle;
	font-size: .8em;
	border-radius: 3px;
	line-height: 1.5;
	padding: 0 5px;
}

#issue-list ul li.issue-box .issue-status[data-state=new]{
	background-color: #0077f5;
	color: #fff;
}

#issue-list ul li.issue-box .issue-status[data-state=open]{
	background-color: #6cc644;
}*/



#issue-list ul li.issue-box .issue-status span{
	display: inline-block;
	font-weight: bold;
	vertical-align: middle;
	text-transform: uppercase;
	margin-left: 3px;
    color: rgba(0,0,0,0.5);
    font-size: 9px;
    border: 1px solid rgba(0,0,0,0.1);
    border-radius: 3px;
    padding: 1px 2px;
}

#issue-list ul li.issue-box .priority{
	width: 17px;
	height: 17px;
	background-size: 100%;
	vertical-align: middle;
	display: inline-block;

}

#issue-list ul li.issue-box[data-disabled=true]{
	background-color: #fafafa;
	color: rgba(0,0,0,0.4);
	filter: grayscale();
}

#issue-list ul li.issue-box[data-disabled=true] .issue-assignees span.user{
	color: rgba(0,0,0,0.4);
}

#issue-list ul li.issue-box[data-disabled=true] .issue-status span{
	color: rgba(0,0,0,0.4);
}

#issue-list ul li.issue-box .priority[title=critical]{
	background-image: url(icons/angle-double-up.svg);
}

#issue-list ul li.issue-box .priority[title=major]{
	background-image: url(icons/angle-up.svg);	
}

#issue-list ul li.issue-box .priority[title=minor]{
	background-image: url(icons/angle-down.svg);
}

#issue-list ul li.issue-box .priority[title=trivial]{
	background-image: url(icons/angle-double-down.svg);
}

#issue-list ul li.issue-box .priority[title=blocker]{
	background-image: url(icons/angle-double-up.svg);
}

#issue-list ul li.issue-box[data-issue_kind="bug"] .issue-labels label{
	background-color: #fef3f2;
	color: #ca0601;
	border-color: #f56a67;
}

#issue-list ul li.issue-box[data-issue_kind="enhancement"] .issue-labels label{
	background-color: #f3f9f3;
	color: #177b1e;
	border-color: #6eb973;
}

#issue-list ul li.issue-box[data-issue_kind="proposal"] .issue-labels label{
	background-color: #fefbf1;
	color: #d5ac04;
	border-color: #fddf68;
}

#issue-list ul li.issue-box[data-disabled=true]:not(.active) .issue-labels label{
	border-color: rgba(0,0,0,0.1);
	background-color: transparent;
	color: rgba(0,0,0,0.4);
}

/*#issue-list ul li.issue-box[data-issue_kind="task"] .issue-labels label{
	background-color: #f6f4fe;
	color: #5c30cb;
	border-color: #9875f1;
}*/


#issue-list ul li.issue-box.active{
	background-color: #f4f9ff;
}

#issue-list ul li.issue-box.active,
#issue-list ul li.issue-box.active .issue-details .issue-date,
#issue-list ul li.issue-box.active .issue-assignees,
#issue-list ul li.issue-box.active .issue-assignees span.user,
#issue-list ul li.issue-box.active .issue-labels label,
#issue-list ul li.issue-box.active .issue-status span{
	color: #0077f5;
	filter: none;
}

#issue-list ul li.issue-box.active .issue-labels label{
	background-color: #f3f7fd;
	border-color: #b5d3f3;
}

#issue-list ul li.issue-box.active .issue-status span{
	border-color: #b5d3f3;
}

#issue-list ul li.issue-box .issue-id{
	vertical-align: middle;
}

#issue-list ul li.issue-box .issue-details .version-no, #issue-list ul li.issue-box .issue-details .issue-date{
	color:rgba(0,0,0,0.4);
	vertical-align: middle;
}

#issue-list ul li.issue-box .issue-details .issue-date{
	float: right;
}

#issue-list ul li.issue-box .issue-title{
	font-size:1.1em;
	font-weight: 400;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	margin: 6px 0;
}

#issue-list ul li.issue-box .issue-labels{
	margin: 10px 0;
}

#issue-list ul li.issue-box .issue-labels label, #issue-labels label{
	background-color: #f3f7fd;
	border: 1px solid #b5d3f3;
	border-radius: 3px;
	color: #729fcc;
	padding: 2px 4px;
	font-weight: 500;
	font-size: 11px;
}

#issue-list ul li.issue-box .issue-assignees, #issue-assignees{
	color: rgba(0,0,0,0.4);
	margin-top: 10px;
	font-size: 12px;
}

#issue-list ul li.issue-box .issue-assignees span.user, #issue-assignees span.user{
	font-weight: 500;
	color: #000;
}

#issue-contents{
	position: fixed;
	left: 565px;
	top: 0;
	bottom: 0;
	right: 0;
	background-color:#fafafa;
}

#issue-contents-scroll{
	height: calc(100% - 230px);
	overflow-y: auto;
}

#issue-new-comment{
	position: fixed;
	bottom: 0;
	left: 565px;
	background-color: #fff;
	height: 50px;
	right: 0;
	border-top: 1px solid rgba(0,0,0,0.1);
}

#issue-contents #issue-contents-head{
	background-color: #fff;
	border-bottom: 1px solid rgba(0,0,0,0.05);
	padding: 1em 2.5em;
}

#issue-contents #issue-contents-head .vote-and-watch{
	float: right;
	font-size: 11px;
	font-weight: 500;
	color: rgba(0,0,0,0.5);
}

#issue-contents #issue-contents-head .vote-and-watch img{
	width: 15px;
	height: 15px;
	vertical-align: middle;
}

#issue-contents #issue-contents-head .vote-and-watch span{
	margin-left: 5px;
}

#issue-contents #issue-contents-head .vote-and-watch span > span{
	vertical-align: middle;
	margin: 0;
}

#issue-contents #issue-contents-head h1{
	font-weight: normal;
	font-size: 1.6em;
	margin: 5px 0;
}

#issue-contents{
	
}

#issue-contents .issue-comment-box{
	background-color: #fff;
	border: 1px solid rgba(0,0,0,0.1);
	border-radius: 5px;
	padding: 1.5em;
	margin: 2em 2.5em;
}

#issue-contents .issue-comment-box .attachments.hide{
	display: none;
}

#issue-contents .issue-comment-box .attachments span{
	color: rgba(0,0,0,0.5);
	font-size: 11px;
	text-transform: uppercase;
	margin-bottom: 5px;
	display: block;
}

#issue-contents .issue-comment-box .attachments div{
	font-size: 12px;
	color: #729fcc;
	cursor: pointer;
}

#issue-contents #issue-description.issue-comment-box{
	border-color: #cce4fd;
}

#issue-contents .issue-comment-box .issue-user{
	padding: 0 0 1em 0;
	border-bottom: 1px solid rgba(0,0,0,0.05);
}

#issue-contents .issue-comment-box .issue-user img{
	vertical-align: middle;
	border-radius: 3px;
	overflow: hidden;
	margin-right: 3px;
}

#issue-contents .issue-comment-box .issue-user .user-name{
	font-weight: bold;
	vertical-align: middle;
}

#issue-contents .issue-comment-box .issue-user .posted-time{
	color: rgba(0,0,0,0.6);
	vertical-align: middle;
}

